<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_rel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:fitsSystemWindows="true"
        android:adjustViewBounds="true"
        android:src="@drawable/android_tiled_background" />

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="137dp"
        android:drawableLeft="@android:drawable/ic_dialog_info"
        android:hint="@string/username"
        android:textColor="@android:color/white"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="-250dp"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:hint="@string/email"
        android:textColor="@android:color/white"
        android:inputType="text" />

    <EditText
        android:id="@+id/user_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="250dp"
        android:drawableLeft="@android:drawable/sym_action_chat"
        android:hint="@string/writeaboutyourself"

        android:textColor="@android:color/white"
        android:inputType="textLongMessage" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="205dp"
        android:background="@android:color/white"
        android:text="@string/next"
        android:textColor="@android:color/holo_blue_dark" />

</RelativeLayout>