<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/android1" />

    <include
        android:id="@+id/tool_bar_details"
        layout="@layout/tool_bar" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/username_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp"
        android:text="@string/demo_user_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/user_email_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="255dp"
        android:text="@string/demo_email"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/user_description_details"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="217dp"
        android:padding="10dp"
        android:text="@string/demo_description"
        android:textColor="@android:color/white"
        android:textSize="20sp"/>

</RelativeLayout>